// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Input > renders checkbox as expected 1`] = `
<div>
  <label
    class="input flex items-center gap-2 cursor-pointer"
  >
    <input
      class="input--checkbox size-6 accent-bluedot-normal rounded cursor-pointer"
      name="checkbox-group"
      type="checkbox"
      value="This is the value"
    />
    <span
      class="input__label"
    >
      This is the value
    </span>
  </label>
</div>
`;

exports[`Input > renders default as expected 1`] = `
<div>
  <label
    class="input flex flex-col gap-2"
  >
    <span
      class="input__label"
    >
      This is the label
    </span>
    <input
      class="input--text border border-color-divider rounded-lg p-4 focus-visible:outline focus-visible:outline-2 focus-visible:-outline-offset-2 focus-visible:outline-bluedot-normal"
      label="This is the label"
      placeholder="This is the placeholder"
      type="text"
    />
  </label>
</div>
`;

exports[`Input > renders radio as expected 1`] = `
<div>
  <label
    class="input flex items-center gap-2 cursor-pointer"
  >
    <input
      class="input--radio size-6 accent-bluedot-normal rounded cursor-pointer"
      name="radio-group"
      type="radio"
      value="This is the value"
    />
    <span
      class="input__label"
    >
      This is the value
    </span>
  </label>
</div>
`;
